[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "limoo"
author = "Soroosh Chabi"
author-email = "chabi@limoo.im"
home-page = "https://github.com/limoo-im/python-sdk"
requires = ["aiohttp~=3.7"]
description-file = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dist-name = "limoo-sdk"
keywords = "limoo,sdk"

[tool.flit.sdist]
exclude = [".gitignore"]